// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package weetbix.internal.admin;

import "google/protobuf/empty.proto";
import "go.chromium.org/luci/analysis/proto/v1/common.proto";

option go_package = "go.chromium.org/luci/analysis/internal/admin/proto;adminpb";

// Admin ops for Weetbix maintainers only.
// You can call the APIs using RPC Explorer:
// * https://chops-weetbix-dev.appspot.com/rpcexplorer/services/ for dev
// * https://chops-weetbix.appspot.com/rpcexplorer/services/ for prod
service Admin {
  // ExportTestVariants triggers ExportTestVariants tasks to export test
  // variants to the specified table.
  //
  // In common cases, bq export should be done automatically by cron job.
  // This RPC is only used to back fill data that already in Weetbix Spanner to
  // BigQuery. It doesn't work if the request asks for data before Weetbix
  // result ingestion started. If such request arises, we need to add another
  // Admin API for it.
  rpc ExportTestVariants(ExportTestVariantsRequest) returns (google.protobuf.Empty) {};
}

message ExportTestVariantsRequest {
  // LUCI Realm. Test variants in this realm are exported.
  string realm = 1;

  // BigQuery table to export test variants to.
  //
  // This table MUST also be listed in the realm configuration.
  string cloud_project = 2;
  string dataset = 3;
  string table = 4;

  // Note that the predicate field is omitted in this request. Because this
  // RPC will use the predicate from realm configuration exclusively.

  // Time range of the data to be exported.
  //
  // Earliest and Latest should be full hours. I.e. they should be 0:00, 1:00 ...
  // Otherwise they will be truncated to the full hours.
  //
  // Note that each row has a separate time range, which size is controlled by
  // testvariantbqexporter. As of Nov 2021, each row contains 1 hour worth of data.
  // If the time range spans longer than 1 hour, the RPC will shard this range
  // into a list of smaller time_ranges each spans 1 hour and schedule
  // ExportTestVariants tasks for each of the smaller ones.
  weetbix.v1.TimeRange time_range = 6;
}
